# rustic-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
example-agent/: Cargo.toml  README.md
src/: agent.rs  error.rs  failover.rs  instrumentation.rs  json_schema.rs  lib.rs  mcp.rs  messages.rs  model.rs  model_config.rs  telemetry.rs  tools.rs  usage.rs
src/providers/: anthropic.rs  gemini.rs  grok.rs  mod.rs  openai.rs
src/realtime/: grok.rs  mod.rs
tests/: agent_failover.rs  agent_limits.rs  agent_messages.rs  agent_multi_turn.rs  agent_output_schema.rs  agent_prepare.rs  agent_streaming.rs  agent_tool_loop.rs  failover.rs  in_memory_config.rs  instrumentation.rs  live_multimodal.rs  live_providers.rs  run_context.rs  run_input_builder.rs  scripted_model.rs  tool_definition.rs  toolset.rs  usage.rs
tests/fixtures/: fixture.m4a
tests/support/: scripted_model.rs  streamed_model.rs
