[package]
name = "rustic-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.77"
async-stream = "0.3.5"
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
eventsource-stream = "0.2.3"
futures = "0.3.30"
futures-util = "0.3.30"
jsonschema = "0.17.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.11"
tokio = { version = "1.40.0", features = ["rt", "sync", "time"] }
tokio-tungstenite = { version = "0.23.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
overflow-checks = true
