[package]
name = "rustic-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.77"
async-stream = "0.3.5"
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
eventsource-stream = "0.2.3"
futures = "0.3.30"
futures-util = "0.3.30"
jsonschema = "0.17.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.11"
tokio = { version = "1.40.0", features = ["rt", "sync", "time"] }
tokio-tungstenite = { version = "0.23.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
opentelemetry = { version = "0.31.0", features = ["trace"], optional = true }
opentelemetry-datadog = { version = "0.19.0", features = ["reqwest-client"], optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "http-proto", "http-json"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.32.1", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "registry"], optional = true }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []
telemetry-otel = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]
telemetry-datadog = [
    "dep:opentelemetry",
    "dep:opentelemetry-datadog",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[profile.release]
overflow-checks = true
