[package]
name = "example-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.7"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.9", features = ["derive"] }
rustic-ai = { path = ".." }
schemars = "0.8.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["io-std", "io-util", "macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
overflow-checks = true
